objects/ASI_KOR_Visitation_Plan__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_KR_SalesLeaderEmail__c</fullName>
        <label>Sales Leader Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Branch_Name__c</fullName>
        <formula>Owner:User.ASI_KOR_User_Branch_Name__c</formula>
        <label>Branch Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                    <default>true</default>
                    <label>January</label>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_No_of_Actual__c</fullName>
        <label>No. of Actual</label>
        <summaryFilterItems>
            <field>ASI_KOR_Visitation_Plan_Detail__c.ASI_KOR_Status__c</field>
            <operation>equals</operation>
            <value>Achieved</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_KOR_Visitation_Plan_Detail__c.ASI_KOR_Visitation_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_No_of_Ad_hoc__c</fullName>
        <label>No. of Ad-hoc</label>
        <summaryFilterItems>
            <field>ASI_KOR_Visitation_Plan_Detail__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Visitation Plan Detail- Ad-Hoc</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_KOR_Visitation_Plan_Detail__c.ASI_KOR_Visitation_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_No_of_Cancelled__c</fullName>
        <label>No. of Cancelled</label>
        <summaryFilterItems>
            <field>ASI_KOR_Visitation_Plan_Detail__c.ASI_KOR_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_KOR_Visitation_Plan_Detail__c.ASI_KOR_Visitation_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_No_of_target__c</fullName>
        <label>No. of Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sys_YearAndMonthAndOwner__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to avoid duplicate year and month for the same user</description>
        <label>Sys_YearAndMonthAndOwner</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sys_Year__c</fullName>
        <formula>IF(ISNUMBER(ASI_KOR_Year__c), VALUE(ASI_KOR_Year__c), NULL)</formula>
        <label>Sys_Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Visits_Achieved__c</fullName>
        <label>Visits Achieved</label>
        <summaryFilterItems>
            <field>ASI_KOR_Visitation_Plan_Detail__c.ASI_KOR_Status__c</field>
            <operation>equals</operation>
            <value>Achieved</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_KOR_Visitation_Plan_Detail__c.ASI_KOR_Visitation_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Visits_Generated__c</fullName>
        <label>Visits Generated</label>
        <summaryForeignKey>ASI_KOR_Visitation_Plan_Detail__c.ASI_KOR_Visitation_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Year__c</fullName>
        <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Visitation Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Confirmed__c</columns>
        <columns>ASI_KOR_Visits_Generated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2015_April</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Confirmed__c</columns>
        <columns>ASI_KOR_Visits_Generated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>April</value>
        </filters>
        <label>2015 April</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2015_August</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Confirmed__c</columns>
        <columns>ASI_KOR_Visits_Generated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>August</value>
        </filters>
        <label>2015 August</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2015_December</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Confirmed__c</columns>
        <columns>ASI_KOR_Visits_Generated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>December</value>
        </filters>
        <label>2015 December</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2015_February</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Confirmed__c</columns>
        <columns>ASI_KOR_Visits_Generated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>February</value>
        </filters>
        <label>2015 February</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2015_January</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Confirmed__c</columns>
        <columns>ASI_KOR_Visits_Generated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>January</value>
        </filters>
        <label>2015 January</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2015_July</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Confirmed__c</columns>
        <columns>ASI_KOR_Visits_Generated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>July</value>
        </filters>
        <label>2015 July</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2015_June</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Confirmed__c</columns>
        <columns>ASI_KOR_Visits_Generated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>June</value>
        </filters>
        <label>2015 June</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2015_March</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Confirmed__c</columns>
        <columns>ASI_KOR_Visits_Generated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>March</value>
        </filters>
        <label>2015 March</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2015_May</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Confirmed__c</columns>
        <columns>ASI_KOR_Visits_Generated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>May</value>
        </filters>
        <label>2015 May</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2015_November</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Confirmed__c</columns>
        <columns>ASI_KOR_Visits_Generated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>November</value>
        </filters>
        <label>2015 November</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2015_October</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Confirmed__c</columns>
        <columns>ASI_KOR_Visits_Generated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>October</value>
        </filters>
        <label>2015 October</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2015_September</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Confirmed__c</columns>
        <columns>ASI_KOR_Visits_Generated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>September</value>
        </filters>
        <label>2015 September</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2016_April</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Confirmed__c</columns>
        <columns>ASI_KOR_Visits_Generated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>April</value>
        </filters>
        <label>2016 April</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2016_August</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Confirmed__c</columns>
        <columns>ASI_KOR_Visits_Generated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>August</value>
        </filters>
        <label>2016 August</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Visitation Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visitation Plans</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_KR_Visitation_Plan</fullName>
        <active>true</active>
        <label>KR Visitation Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_Visitation_Plan_Locked</fullName>
        <active>true</active>
        <label>ASI KOR Visitation Plan (Locked)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_KOR_CannotEditConfirmed</fullName>
        <active>false</active>
        <description>Should not update confirmed visitations</description>
        <errorConditionFormula>ISCHANGED( ASI_KOR_Confirmed__c ) &lt;&gt; (ASI_KOR_Confirmed__c == TRUE)</errorConditionFormula>
        <errorMessage>The visitation plan is already confirmed and copied to visitation events.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_KOR_Cannot_Confirm_Without_Detail</fullName>
        <active>true</active>
        <description>Cannot confirm the visitation plan without any detail line.</description>
        <errorConditionFormula>ASI_KOR_Visits_Generated__c  = 0 &amp;&amp;   ASI_KOR_Confirmed__c = true</errorConditionFormula>
        <errorMessage>Cannot confirm the visitation plan without any detail line.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_KOR_Confirmed_Plan_Cannot_Delete</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 ASI_KOR_Confirmed__c ,
  ASI_KOR_Visits_Generated__c  &lt;
 PRIORVALUE(ASI_KOR_Visits_Generated__c )
)</errorConditionFormula>
        <errorMessage>You are not allowed to delete Visitation Plan Detail.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_KOR_ForbidUpdateDateIfHavingDetail</fullName>
        <active>true</active>
        <description>Do not allow update of Year/Month if already having Visitation Details</description>
        <errorConditionFormula>(ISCHANGED( ASI_KOR_Year__c ) || ISCHANGED( ASI_KOR_Month__c )) &amp;&amp; ASI_KOR_Visits_Generated__c &gt; 0</errorConditionFormula>
        <errorMessage>Visitation details are already created. Update of Year / Month is not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_KOR_YearValidation</fullName>
        <active>true</active>
        <description>Check the format of year</description>
        <errorConditionFormula>NOT( ISNUMBER( ASI_KOR_Year__c ) )
 || CEILING( VALUE( ASI_KOR_Year__c ) ) != VALUE( ASI_KOR_Year__c )
 || VALUE( ASI_KOR_Year__c ) &lt;= 1000
 || VALUE( ASI_KOR_Year__c ) &gt;= 10000</errorConditionFormula>
        <errorDisplayField>ASI_KOR_Year__c</errorDisplayField>
        <errorMessage>Invalid Year</errorMessage>
    </validationRules>
</CustomObject>